--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion "21.1.0"
 
     defaultConfig {
-        applicationId "me.aktor.simpleapp"
+        applicationId "me.aktor.utils"
         minSdkVersion 10
         targetSdkVersion 21
         versionCode 1
@@ -13,15 +13,13 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile project(':utils')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.squareup.okhttp:okhttp:2.1.0-RC1'
 }
